// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="card feature-card card--atomic card--not-disabled"
    href="/blog/asdfg"
  >
    <div
      class="card__outer-container"
    >
      <div
        class="card__background"
      />
      <div
        class="card__content-container card__content-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="nan-invalid-date"
                >
                  NaN Invalid Date
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="nan"
                >
                  NaN
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="invalid-date"
                >
                  Invalid Date
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer section__outer--inherit-color feature-card__title"
            >
              <h2
                class="section__heading section__heading--no-padding"
                id="blog-1-"
              >
                Blog 1 
              </h2>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <a
    aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
    bannercolor="#01579b"
    class="card feature-card card--atomic card--not-disabled"
    href="/blog/mndyd8"
  >
    <div
      class="card__outer-container"
    >
      <div
        class="card__background"
      />
      <div
        class="card__content-container card__content-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer section__outer--inherit-color feature-card__title"
            >
              <h2
                class="section__heading section__heading--no-padding"
                id="untitled-blog-(deleted)"
              >
                Untitled blog (DELETED)
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="sc-bczRLJ"
              >
                <span
                  class="sc-gsnTZi dEtGVw"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton image__skeleton--animated"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <noscript />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <a
    aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
    bannercolor="#01579b"
    class="card feature-card card--atomic card--not-disabled"
    href="/blog/zxywvuts"
  >
    <div
      class="card__outer-container"
    >
      <div
        class="card__background"
      />
      <div
        class="card__content-container card__content-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="23-30-dec"
                >
                  23-30 Dec
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="23-30"
                >
                  23-30
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="dec"
                >
                  Dec
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer section__outer--inherit-color feature-card__title"
            >
              <h2
                class="section__heading section__heading--no-padding"
                id="st-ives--2018"
              >
                St Ives  2018
              </h2>
            </div>
            <div
              class="feature-card__children"
            >
              <div
                class="sc-bczRLJ"
              >
                <span
                  class="sc-gsnTZi dEtGVw"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="feature-card__image-container"
          >
            <div
              class="image__outer feature-card__image"
            >
              <div
                class="image__placeholder"
                style="padding-bottom: 100%;"
              >
                <div
                  class="image__spinner-container"
                >
                  <div
                    class="skeleton__outer image__skeleton image__skeleton--animated"
                  >
                    <div
                      class="skeleton__shimmer"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--light"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <img
                  alt="card"
                  class="image__img image__img--animated image__img--hidden image__img--dark"
                  src="https://i.imgur.com/ppPEuDs.jpg"
                />
                <noscript />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="card feature-card test-custom-classname card--atomic card--not-disabled"
    href="/blog/asdfg"
  >
    <div
      class="card__outer-container"
    >
      <div
        class="card__background"
      />
      <div
        class="card__content-container card__content-container--padded"
      >
        <div
          aria-hidden="true"
          class="feature-card__outer-container feature-card__outer-container--auto"
        >
          <div
            class="feature-card__date"
          >
            <div
              class="feature-card__annotation feature-card__annotation--mobile"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="nan-invalid-date"
                >
                  NaN Invalid Date
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="nan"
                >
                  NaN
                </h3>
              </div>
            </div>
            <div
              class="feature-card__annotation feature-card__annotation--tablet"
            >
              <div
                class="subsection__outer subsection__outer--inherit-color"
              >
                <h3
                  class="subsection__heading subsection__heading--no-padding"
                  id="invalid-date"
                >
                  Invalid Date
                </h3>
              </div>
            </div>
          </div>
          <div
            class="feature-card__center-container"
          >
            <div
              class="section__outer section__outer--inherit-color feature-card__title"
            >
              <h2
                class="section__heading section__heading--no-padding"
                id="blog-1-"
              >
                Blog 1 
              </h2>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="card feature-card blogs-list__card card--atomic card--not-disabled"
      href="/blog/asdfg"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="nan-invalid-date"
                  >
                    NaN Invalid Date
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="nan"
                  >
                    NaN
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="invalid-date"
                  >
                    Invalid Date
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="blog-1-"
                >
                  Blog 1 
                </h2>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      bannercolor="#01579b"
      class="card feature-card blogs-list__card card--atomic card--not-disabled"
      href="/blog/zxywvuts"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="dec"
                  >
                    Dec
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="st-ives--2018"
                >
                  St Ives  2018
                </h2>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="sc-bczRLJ"
                >
                  <span
                    class="sc-gsnTZi dEtGVw"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      bannercolor="#01579b"
      class="card feature-card blogs-list__card card--atomic card--not-disabled"
      href="/blog/mndyd8"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="dec"
                  >
                    Dec
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="untitled-blog-(deleted)"
                >
                  Untitled blog (DELETED)
                </h2>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="sc-bczRLJ"
                >
                  <span
                    class="sc-gsnTZi dEtGVw"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="card feature-card blogs-list__card card--atomic card--not-disabled"
      href="/blog/asdfg"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="nan-invalid-date"
                  >
                    NaN Invalid Date
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="nan"
                  >
                    NaN
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="invalid-date"
                  >
                    Invalid Date
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="blog-1-"
                >
                  Blog 1 
                </h2>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      bannercolor="#01579b"
      class="card feature-card blogs-list__card card--atomic card--not-disabled"
      href="/blog/zxywvuts"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="dec"
                  >
                    Dec
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="st-ives--2018"
                >
                  St Ives  2018
                </h2>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="sc-bczRLJ"
                >
                  <span
                    class="sc-gsnTZi dEtGVw"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      bannercolor="#01579b"
      class="card feature-card blogs-list__card card--atomic card--not-disabled"
      href="/blog/mndyd8"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="dec"
                  >
                    Dec
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="untitled-blog-(deleted)"
                >
                  Untitled blog (DELETED)
                </h2>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="sc-bczRLJ"
                >
                  <span
                    class="sc-gsnTZi dEtGVw"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="card feature-card blogs-list__card blogs-list__card--with-controls card--atomic card--not-disabled"
      href="/blog/asdfg"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="nan-invalid-date"
                  >
                    NaN Invalid Date
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="nan"
                  >
                    NaN
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="invalid-date"
                  >
                    Invalid Date
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="blog-1-"
                >
                  Blog 1 
                </h2>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-eCYdqJ fYUEyt blogs-list__control"
      type="button"
    >
      <span
        class="sc-gKXOVf lfZDlt"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      bannercolor="#01579b"
      class="card feature-card blogs-list__card blogs-list__card--with-controls card--atomic card--not-disabled"
      href="/blog/zxywvuts"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="dec"
                  >
                    Dec
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="st-ives--2018"
                >
                  St Ives  2018
                </h2>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="sc-bczRLJ"
                >
                  <span
                    class="sc-gsnTZi dEtGVw"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-eCYdqJ fYUEyt blogs-list__control"
      type="button"
    >
      <span
        class="sc-gKXOVf lfZDlt"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      bannercolor="#01579b"
      class="card feature-card blogs-list__card blogs-list__card--with-controls card--atomic card--not-disabled"
      href="/blog/mndyd8"
    >
      <div
        class="card__outer-container"
      >
        <div
          class="card__background"
        />
        <div
          class="card__content-container card__content-container--padded"
        >
          <div
            aria-hidden="true"
            class="feature-card__outer-container feature-card__outer-container--auto"
          >
            <div
              class="feature-card__date"
            >
              <div
                class="feature-card__annotation feature-card__annotation--mobile"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30-dec"
                  >
                    23-30 Dec
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="23-30"
                  >
                    23-30
                  </h3>
                </div>
              </div>
              <div
                class="feature-card__annotation feature-card__annotation--tablet"
              >
                <div
                  class="subsection__outer subsection__outer--inherit-color"
                >
                  <h3
                    class="subsection__heading subsection__heading--no-padding"
                    id="dec"
                  >
                    Dec
                  </h3>
                </div>
              </div>
            </div>
            <div
              class="feature-card__center-container"
            >
              <div
                class="section__outer section__outer--inherit-color feature-card__title"
              >
                <h2
                  class="section__heading section__heading--no-padding"
                  id="untitled-blog-(deleted)"
                >
                  Untitled blog (DELETED)
                </h2>
              </div>
              <div
                class="feature-card__children"
              >
                <div
                  class="sc-bczRLJ"
                >
                  <span
                    class="sc-gsnTZi dEtGVw"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="feature-card__image-container"
            >
              <div
                class="image__outer feature-card__image"
              >
                <div
                  class="image__placeholder"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="image__spinner-container"
                  >
                    <div
                      class="skeleton__outer image__skeleton image__skeleton--animated"
                    >
                      <div
                        class="skeleton__shimmer"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--light"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="image__img image__img--animated image__img--hidden image__img--dark"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <noscript />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-eCYdqJ fHHAFh blogs-list__control"
      disabled=""
      type="button"
    >
      <span
        class="sc-gKXOVf lfZDlt"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
